# apps/api/src/modules/salary-insights/dto/salary-country-query.dto.ts
@@ -1,0 +1,14 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsNotEmpty, IsString } from 'class-validator';
+
+export class SalaryJobTitleQueryDto {
+  @ApiProperty({ example: 'India', type: String })
+  @IsNotEmpty()
+  @IsString()
+  country!: string;
+
+  @ApiProperty({ example: 'Software Engineer', type: String })
+  @IsNotEmpty()
+  @IsString()
+  jobTitle!: string;
+}
